2048.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "the2048-service"
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: "the2048"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "the2048-deployment"
spec:
  selector:
    matchLabels:
      app: "the2048"
  replicas: 5
  template:
    metadata:
      labels:
        app: "the2048"
    spec:
      containers:
        - image: alexwhen/docker-2048
          imagePullPolicy: Always
          name: "2048"
          ports:
            - containerPort: 80
