2048-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: the2048-ingress
spec:
  rules:
  - host: game.saic-research.com
    http:
      paths:
      - backend:
          serviceName: the2048-service
          servicePort: 80
